Fix issue #2 by disabling horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body{
   font-family: 'Ubuntu', Helvetica, Arial;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a:active:not(.button), a:focus:not(.button){
